force-app/main/default/objects/Opportunity_AmountHistory__c/Opportunity_AmountHistory__c.object-meta.xml
<CustomObject>
    <label>Opportunity Amount History</label>
    <nameField>
        <displayFormat>AH-{YY}{MM}{00000}</displayFormat>
        <label>Amount History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Amount History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>