force-app/main/default/objects/Opportunity_AmountHistory__c/fields/Amount_New__c.field-meta.xml
<CustomField>
    <fullName>Amount_New__c</fullName>
    <label>Amount(New)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>