force-app/main/default/objects/Opportunity_AmountHistory__c/fields/Amount_Old__c.field-meta.xml
<CustomField>
    <fullName>Amount_Old__c</fullName>
    <label>Amount(Old)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>