force-app/main/default/objects/Opportunity_AmountHistory__c/fields/FK__c.field-meta.xml
<CustomField>
    <fullName>FK__c</fullName>
    <externalId>true</externalId>
    <label>FK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>