force-app/main/default/objects/Opportunity_AmountHistory__c/fields/OpportunityCode__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCode__c</fullName>
    <formula>Opportunity__r.OpportunityCode__c</formula>
    <label>Opportunity Code</label>
    <type>Text</type>
</CustomField>