force-app/main/default/objects/Opportunity_AmountHistory__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z01</fullName>
            </value>
            <value>
                <fullName>Z02</fullName>
            </value>
            <value>
                <fullName>Z03</fullName>
            </value>
            <value>
                <fullName>Z04</fullName>
            </value>
            <value>
                <fullName>Z05</fullName>
            </value>
            <value>
                <fullName>Z06</fullName>
            </value>
            <value>
                <fullName>Z07</fullName>
            </value>
            <value>
                <fullName>Z08</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>